# Sesable

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
backend/: CMakeLists.txt
backend/src/: CMakeLists.txt  database.hpp  jsonserializable.hpp  logger.cpp  logger.hpp  main.cpp  organization.hpp  table.hpp
frontend/: .env.in  CMakeLists.txt  eslint.config.mjs  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx  index.tsx
frontend/src/components/: Dropdown.tsx  ErrorBoundary.tsx  Options.tsx  OptionsFile.tsx  OptionsNote.tsx  Slider.tsx
